--- a/config.json
+++ b/config.json
@@ -20,6 +20,11 @@
   },
 
   "development": {
-    "discord-id": "873072369416175697"
+    "discord-id": "873072369416175697",
+    "developers": [
+      "377594849760772117",
+      "467805961596305410",
+      "351132215700357131"
+    ]
   }
 }
