trying smth with tickets

--- a/config.json
+++ b/config.json
@@ -14,6 +14,11 @@
     "reports": 873344444248776714
   },
 
+  "tickets": {
+    "category": 873747005992730705,
+
+  },
+
   "emotes": {
     "no": "873287193811124274",
     "yes": "873287193051930667"
