--- a/config.json
+++ b/config.json
@@ -21,7 +21,8 @@
 
   "emotes": {
     "no": "873287193811124274",
-    "yes": "873287193051930667"
+    "yes": "873287193051930667",
+    "close": "874722716186443796"
   },
 
   "development": {
