--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
   "emotes": {
     "no": "873287193811124274",
     "yes": "873287193051930667",
-    "close": "874722716186443796"
+    "close": "<:exit:874722716186443796>"
   },
 
   "development": {
