Updated eval main commands

--- a/config.json
+++ b/config.json
@@ -22,7 +22,8 @@
   "emotes": {
     "no": "873287193811124274",
     "yes": "873287193051930667",
-    "close": "<:close:874730745430700083>"
+    "close": "<:close:874730745430700083>",
+    "create": "<:create:874802883776876624>"
   },
 
   "development": {
