Added join & leave listeners

--- a/config.json
+++ b/config.json
@@ -11,7 +11,8 @@
 
   "channels": {
     "suggestions": 873280232327618614,
-    "reports": 873344444248776714
+    "reports": 873344444248776714,
+    "welcome": 484834644760592387
   },
 
   "tickets": {
