--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   },
 
   "support-discord": "https://caledonian.xyz/",
-  "footer-link": "caledonian.xyz",
+  "footer-link": "Angels of Demise",
 
   "channels": {
     "suggestions": 874873540258701392,
@@ -79,7 +79,8 @@
     "developers": [
       "377594849760772117",
       "467805961596305410",
-      "351132215700357131"
+      "351132215700357131",
+      "208952626656706560"
     ]
   }
 }
