--- a/config.json
+++ b/config.json
@@ -17,7 +17,8 @@
 
   "tickets": {
     "category": 769291041638449152,
-    "support-role-id": 769291042562113566
+    "support-role-id": 769291042562113566,
+    "application-role-id": 769291042562113566
   },
 
   "emotes": {
