- Added ApplicationCommand.java - Modified ApplicationManager.java to reflect the new application changes - Modified DemiseBot.java sendTicketChannel to add the new button, and examples

--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
 
   "tickets": {
     "category": 769291041638449152,
+    "application-category": 886108853421346937,
     "support-role-id": 769291042562113566,
     "application-role-id": 769291042562113566
   },
