- Updated a few things

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   },
 
   "support-discord": "https://caledonian.xyz/",
-  "footer-link": "Angels of Demise",
+  "footer-link": "Rise of the Fallen",
 
   "channels": {
     "suggestions": 874873540258701392,
