--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 
   "activity": {
     "status": "ONLINE",
-    "activity": "Angels of Demise"
+    "activity": "Rise of the fallen"
   },
 
   "support-discord": "https://caledonian.xyz/",
